--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -341,7 +341,7 @@
                             <i class="fa fa-th"></i>
                         </div>
                         <div class="feature-content">
-                          <a href="/predict" ><h5>Batch Predictor</h5></a>
+                          <a href="/batch_predict" ><h5>Batch Predictor</h5></a>
 
                             <p>Form will be displayed for batch prediction. Submit the form to get estimated count for Rental Bike Count. </p>
                         </div>
