--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,7 +34,7 @@
         <a
           class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
           href="/dashboard"
-          >Bike Count Predictor</a
+          ><img src="{{ url_for('static', filename='/Rental Bikes-logos.jpeg') }}" style="width: 100px;height: 50px;">Rental Bikes Count Predictor</a
         >
         <button
           class="navbar-toggler"
@@ -128,7 +128,7 @@
                   <li>
                     <a href="/predict" class="nav-link px-3">
                       <span class="me-2"
-                        ><i class="bi bi-speedometer2"></i
+                        ><i class="fa fa-bar-chart"></i
                       ></span>
                       <span>Single Count Predictor</span>
                     </a>
@@ -136,7 +136,7 @@
                   <li>
                     <a href="/batch_predict" class="nav-link px-3">
                       <span class="me-2"
-                        ><i class="bi bi-speedometer2"></i
+                        ><i class="fa fa-th"></i
                       ></span>
                       <span>Batch Count Predictor</span>
                     </a>
@@ -152,7 +152,7 @@
             </li>
             <li>
               <a href="/saved_models" class="nav-link px-3">
-                <span class="me-2"><i class="bi bi-book-fill"></i></span>
+                <span class="me-2"><i class="fa fa-rocket"></i></span>
                 <span>Trained Models</span>
               </a>
             </li>
@@ -163,8 +163,8 @@
               </div>
             </li>
             <li>
-              <a href="/logs" class="nav-link px-3 active">
-                <span class="me-2"><i class="bi bi-speedometer2"></i></span>
+              <a href="/logs" class="nav-link px-3">
+                <span class="me-2"><i class="fa fa-file"></i></span>
                 <span>Logs Details</span>
               </a>
             </li>
@@ -176,7 +176,7 @@
             </li>
             <li>
               <a href="/train" class="nav-link px-3">
-                <span class="me-2"><i class="bi bi-table"></i></span>
+                <span class="me-2"><i class="fa fa-repeat"></i></span>
                 <span>Initiate Model Training</span>
               </a>
             </li>
