--- a/templates/update_model.html
+++ b/templates/update_model.html
@@ -17,27 +17,24 @@
             </ol>
         </nav>
 <div class="row">
-    <div class="col-md-12 " style="margin-bottom:20px;height:500px;overflow:scroll">
-        <form method="post">
+    <div class="col-md-12 " >
+        <form method="post" action="/update_model_config">
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Existing model config</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"  readonly>
                     {{ result['model_config'] }}
-
                 </textarea>
               </div>
-        
               <div class="mb-3">
               <a href="https://jsonformatter.curiousconcept.com/#" class="btn btn-primary" target="_blank">Validate model config json</a>
         </div>
-
-        <div class="mb-3">
-            <input type="submit"  class="btn btn-danger" value="Update model config"/>
-          </div>
               <div class="mb-3">
             <label for="exampleFormControlTextarea2" class="form-label">Model Config JSON:</label>
             <textarea class="form-control" name="new_model_config" id="exampleFormControlTextarea2" rows="10"></textarea>
         </div>
+        <div class="mb-3">
+            <input type="submit"  class="btn btn-warning" value="Update model config"/>
+          </div>
         
         </form>
     </div>
